# spinbike

./: .gitignore  CLAUDE.md  Cargo.toml  VERSION  deny.toml  desk-snap.yml  prod-reports.yml  spinbike.db
.cargo/: mutants.toml
.claude/skills/auth-onboarding/: SKILL.md
.claude/skills/ci-deploy/: SKILL.md
.claude/skills/db-migrations/: SKILL.md
.claude/skills/domain/: SKILL.md
.claude/skills/e2e-testing/: SKILL.md
.claude/skills/ewelink-door/: SKILL.md
.claude/skills/frontend-pwa/: SKILL.md
.claude/skills/prod-verification/: SKILL.md
.github/scripts/: sanity_check_ui_mutants.py
.github/workflows/: ci.yml  deploy.yml  mutation-full.yml
crates/spinbike-core/: Cargo.toml
crates/spinbike-core/src/: auth.rs  errors.rs  lib.rs  models.rs  reports.rs  services.rs  stats.rs  ws.rs
crates/spinbike-server/: Cargo.toml
crates/spinbike-server/src/: error.rs  lib.rs  rate_limit.rs  util.rs  ws.rs
crates/spinbike-server/src/auth/: mod.rs  oauth.rs
crates/spinbike-server/src/db/: backfill.rs  cards.rs  classes.rs  error.rs  login_tokens.rs  migrations.rs  mod.rs  persistent_bookings.rs  reports.rs  settings.rs  transactions.rs  users.rs
crates/spinbike-server/src/ewelink/: auth.rs  crypto.rs  error.rs  mod.rs  ws.rs
crates/spinbike-server/src/jobs/: charger.rs  materialiser.rs  mod.rs  token_purge.rs
crates/spinbike-server/src/mail/: error.rs  mod.rs
crates/spinbike-server/src/routes/: admin.rs  auth.rs  cards.rs  classes.rs  door.rs  mod.rs  my_balance.rs  payments.rs  persistent_bookings.rs  reports.rs  static_files.rs  test_fixtures.rs  transactions.rs  upcoming_classes.rs  users.rs  version.rs
crates/spinbike-server/tests/: admin_routes.rs  api_error_codes.rs  auth_routes.rs  cards_last_visit.rs  cards_routes.rs  cards_stats.rs  classes_routes.rs  door_route.rs  ewelink_ws.rs  local_day_boundary.rs  monthly_pass.rs  pass_expiry_local_day.rs  payments.rs  payments_charge_validation.rs  persistent_bookings_routes.rs  reports.rs  static_files.rs  transactions_date.rs  transactions_note.rs  transactions_routes.rs  upcoming_classes_routes.rs  users_by_movement.rs  users_delete.rs  users_email_conflict_resolution.rs  users_routes.rs
crates/spinbike-server/tests/helpers/: mod.rs
deploy/cloudflared/: config.yml.example
deploy/systemd/: spinbike-dev.env.example  spinbike-dev.service  spinbike-prod.env.example  spinbike-sync-dev.service  spinbike-sync-dev.timer  spinbike.service
docs/: DEPLOY.md  autopilot-log.md
docs/operations/: environments.md  migrations.md
docs/superpowers/plans/: 2026-04-09-spinbike-pwa.md  2026-04-15-card-search-keyboard-nav-fix.md  2026-04-17-monthly-pass.md  2026-04-19-spin-booking.md  2026-04-20-credit-improvements.md  2026-04-23-modern-responsive-redesign.md  2026-04-23-prod-dev-environments.md  2026-04-24-staff-ceo-redesign.md  2026-04-26-card-rework.md  2026-04-27-legacy-services-backfill.md  2026-04-28-no-predefined-prices.md  2026-04-28-reports-visit-count.md  2026-04-28-staff-button-layout.md  2026-04-29-card-history-clarity-and-notes.md  2026-04-30-fitness-preselect.md  2026-04-30-staff-desk-ux-cluster.md  2026-05-01-quality-bundle.md  2026-05-01-spinning-chip.md  2026-05-02-ceo-dashboard-optimization.md  2026-05-02-quality-followups.md  2026-05-03-legacy-transaction-normalization.md  2026-05-03-per-card-overview.md  2026-05-04-last-visit-display-and-sort.md  2026-05-04-visit-button-feedback.md  2026-05-05-negative-balance-list.md  2026-05-05-users-replace-cards.md  2026-05-06-rename-monthly-pass.md  (+8 more)
e2e/: global-setup.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/tests/: add-person.spec.ts  admin.spec.ts  auth.spec.ts  card-action-form-language.spec.ts  card-action-form.spec.ts  card-search-keyboard.spec.ts  code-login.spec.ts  credit-improvements.spec.ts  dashboard-button-layout.spec.ts  dashboard-desk-reset.spec.ts  dashboard-error-alert.spec.ts  dashboard.spec.ts  deleted-email-conflict.spec.ts  desk-now-panel.spec.ts  desk-ux.spec.ts  door-open.spec.ts  edit-info-fixes.spec.ts  edit-tx-date.spec.ts  helpers.ts  install-prompt.spec.ts  invite-button.spec.ts  last-visit-display.spec.ts  legacy-history.spec.ts  log-visit-class-only.spec.ts  log-visit-duplicate-warning.spec.ts  login-link.spec.ts  monthly-pass-expired.spec.ts  monthly-pass.spec.ts  my-balance-movements.spec.ts  my-bookings.spec.ts  nav-adaptive.spec.ts  nav-brand-link.spec.ts  negative-balance.spec.ts  no-predefined-prices.spec.ts  per-card-overview.spec.ts  post-backfill-history.spec.ts  redesign-history-pagination.spec.ts  redesign-sheets.spec.ts  redesign-theme.spec.ts  reports-alerts.spec.ts  (+20 more)
scripts/: setup-environments.sh  sync-version.sh
spinbike-ui/: Cargo.toml  Trunk.toml  index.html  manifest.json  style.css  sw.js
spinbike-ui/.cargo/: config.toml
spinbike-ui/src/: api.rs  auth.rs  dates.rs  i18n.rs  lib.rs  platform.rs  relative_date.rs  router.rs  util.rs  ws.rs
spinbike-ui/src/components/: adaptive_nav.rs  class_card.rs  code_login_form.rs  date_input.rs  day_picker.rs  door_button.rs  install_prompt.rs  login_link_form.rs  mod.rs  nav.rs  persistent_toggles.rs  segmented.rs  sheet.rs  upcoming_classes.rs  version_footer.rs
spinbike-ui/src/pages/: admin.rs  card_ops.rs  dashboard.rs  door.rs  link_card.rs  login.rs  mod.rs  my_balance.rs  my_bookings.rs  payments.rs  schedule.rs  staff_dashboard.rs  welcome.rs
spinbike-ui/src/pages/dashboard/: action_form.rs  add_person_form.rs  block_button.rs  card_panel.rs  charge_section.rs  deleted_email_conflict.rs  edit_info_form.rs  helpers.rs  mod.rs  negative_balance_list.rs  overview_tab.rs  pass_banner.rs  sell_pass_modal.rs  topup_section.rs  transactions_list.rs
spinbike-ui/src/pages/dashboard/sheets/: delete_user.rs  edit_pass_date.rs  edit_tx_date.rs  mod.rs
spinbike-ui/src/pages/desk/: mod.rs  now_panel.rs
spinbike-ui/src/pages/reports/: activity_feed.rs  alerts_banner.rs  filters_bar.rs  kpi_cards.rs  mod.rs  users_by_movement.rs
spinbike-ui/src/pages/reports/sheets/: alert_detail.rs  calendar_picker.rs  mod.rs
(+37 files in other folders)
