[workspace]
members = ["crates/spinbike-core", "crates/spinbike-server"]
exclude = ["spinbike-ui"]
resolver = "2"

[workspace.package]
version = "0.13.2"
edition = "2024"
license = "MIT"

[workspace.dependencies]
spinbike-core = { path = "crates/spinbike-core" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
