[workspace]
members = ["crates/spinbike-core", "crates/spinbike-server"]
exclude = ["spinbike-ui"]
resolver = "2"

[workspace.package]
version = "0.15.0-dev.8"
edition = "2024"
license = "MIT"

[workspace.dependencies]
spinbike-core = { path = "crates/spinbike-core" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-native-roots", "connect"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
urlencoding = "2"
base64 = "0.22"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
