[workspace]
members = ["crates/spinbike-core", "crates/spinbike-server"]
exclude = ["spinbike-ui"]
resolver = "2"

[workspace.package]
version = "0.15.0-dev.49"
edition = "2024"
license = "MIT"

[workspace.dependencies]
spinbike-core = { path = "crates/spinbike-core" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-native-roots", "connect"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
urlencoding = "2"
base64 = "0.22"
# NO native-tls (musl/CI-friendly, consistent with reqwest/tokio-tungstenite
# above): tokio1-rustls-tls = tokio1 async + rustls + ring crypto backend +
# webpki-roots (bundled Mozilla CA roots — lettre 0.11 has no separate
# native-cert-store feature; webpki-roots is the portable/hermetic choice
# for a public SMTP relay like Gmail).
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

# Build profile used by cargo-mutants (see .cargo/mutants.toml `profile`).
# Inherits the test profile but drops debuginfo — each mutant is built + tested
# in isolation, so faster builds directly shrink the per-mutant cost and keep
# the diff-scoped PR gate inside its 20-min-per-shard budget (mutation-testing
# skill: fix the setup, never raise the timeout).
[profile.mutants]
inherits = "test"
debug = false
