[package]
name = "spinbike-ui"
version = "0.15.0-dev.86"
edition = "2024"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spinbike-core = { path = "../crates/spinbike-core" }
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = ["http", "websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-utils = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Location",
    "Window",
    "Storage",
    "HtmlInputElement",
    "HtmlSelectElement",
    "KeyboardEvent",
    "MediaQueryList",
] }
js-sys = "0.3"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[dev-dependencies]
wasm-bindgen-test = "0.3"
