[package]
name = "spinbike-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
spinbike-core = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
chrono-tz = { version = "0.10", default-features = false }
rust-embed = { version = "8", features = ["include-exclude"] }
mime_guess = "2"
jsonwebtoken = "9"
argon2 = "0.5"
# argon2 re-exports `password_hash`; auth/mod.rs uses its rand_core-0.6 `OsRng`
# (SaltString::generate). `OsRng` is gated behind `rand_core/getrandom`, which
# argon2's own features never enable (its `rand` feature only pulls the
# rand_core dep, not the getrandom feature). It was silently on via
# tokio-tungstenite 0.24's transitive rand 0.8 until #167 bumped tungstenite to
# 0.30 — declare it explicitly so the salt RNG can never break on a dep bump.
password-hash = { version = "0.5", features = ["getrandom"] }
rand = "0.10"
unicode-normalization = "0.1"
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
lettre = { workspace = true }
mutants = "0.0.3"

[[bin]]
name = "spinbike-server"
path = "src/bin/server.rs"


[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
httpmock = "0.8"
